[gd_scene load_steps=3 format=3 uid="uid://cauja3vbddl3x"]

[ext_resource type="Texture2D" uid="uid://crg7ddqi8kjkj" path="res://assets/sprites/player-sprite.png" id="1_c6kyn"]
[ext_resource type="Script" path="res://ui/single_player_stat_ui.gd" id="1_pxm1r"]

[node name="SinglePlayerStatUI" type="Panel"]
custom_minimum_size = Vector2(100, 40)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_pxm1r")

[node name="AssignStatPointButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="AssignStatPointButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="AssignStatPointButton/VBoxContainer"]
custom_minimum_size = Vector2(40, 2.08165e-12)
layout_mode = 2
texture = ExtResource("1_c6kyn")
expand_mode = 5
stretch_mode = 5

[node name="PointsAssignedLabel" type="Label" parent="AssignStatPointButton/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "+1
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="AssignStatPointButton" to="." method="_on_assign_stat_point_button_pressed"]
